syntax = "proto3";

package api.protobuf.user.v1;

option go_package = "github.com/jxlwqq/blog-microservices/api/protobuf/user/v1";

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

service UserService {
  rpc ListUsersByIDs(ListUsersByIDsRequest) returns (ListUsersByIDsResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserResponse) {}
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message User {
  uint64 id = 1;
  string uuid = 2;
  string username = 3;
  string email = 4;
  string avatar = 5;
  string password = 6;
  string role = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message ListUsersByIDsRequest {
  repeated uint64 ids = 1;
}

message ListUsersByIDsResponse {
  repeated User users = 1;
}

message GetUserRequest {
  uint64 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUserByEmailRequest {
  string email = 1 [(buf.validate.field).string.email = true];
  string password = 2;
}

message GetUserByUsernameRequest {
  string username = 1 [(buf.validate.field).string.min_len = 1, (buf.validate.field).string.max_len = 30];
  string password = 2;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  bool success = 1;
}

message DeleteUserRequest {
  uint64 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}